--- a/recovery/root/meta_init.rc
+++ b/recovery/root/meta_init.rc
@@ -557,6 +557,11 @@ service nvram_daemon /vendor/bin/nvram_daemon
     group system
     oneshot
 
+
+service mobile_log_d /vendor/bin/mobile_log_d
+    class main
+
+
 #mass_storage,adb,acm
 on property:ro.boot.usbconfig=0
     write /sys/class/android_usb/android0/iSerial $ro.serialno
